# RhymeFlow

./: .gitignore  README.md  pyproject.toml  wan_t2v_inference.py
docs/: WAN_T2V_DEFAULTS.md  WAN_T2V_PROMPT3_KEYFRAME_RHYME_SPEED_TUNING_2026_05_25.md  WAN_T2V_PROMPT3_TW_M_GRID_AROUND_TW8_M3_SKIP3_5_2026_05_25.md
examples/10/: prompt.txt
examples/11/: prompt.txt
examples/12/: prompt.txt
examples/13/: prompt.txt
examples/15/: prompt.txt
examples/8/: prompt.txt
examples/9/: prompt.txt
scripts/eval/: aggregate_wan_t2v_comparison.py  compute_video_metrics_vs_dense.py
scripts/wan/: wan_t2v_batch.sh  wan_t2v_case.sh  wan_t2v_eval.sh
svg/kernels/: __init__.py
svg/kernels/triton/: rmsnorm.py
svg/models/: __init__.py  utils.py
svg/models/wan/: attention.py  foca.py  inference.py  rhymeflow.py
svg/utils/: keyframe_detection.py
