[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rhymeflow"
version = "0.1.0"
description = "Training-free Wan2.1 text-to-video acceleration with RhymeFlow."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "RhymeFlow contributors" }]
dependencies = [
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "diffusers==0.34.0",
    "transformers>=4.49.2",
    "accelerate>=1.7.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "pillow>=9.0.0",
    "tqdm>=4.65.0",
    "matplotlib>=3.5.0",
    "einops>=0.6.0",
    "ftfy",
    "imageio",
    "imageio-ffmpeg",
    "termcolor",
    "tabulate",
    "lpips",
    "scikit-image",
    "loguru",
    "pandas",
    "sympy",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "ruff>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["svg"]

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [".git", ".mypy_cache", ".tox", ".venv", "build", "dist", "result"]

[tool.black]
line-length = 120
target-version = ["py310"]
